src/objects/Data_Asset_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Please provide any specific comments regarding the data in relation to this study/project.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Asset__c</fullName>
        <label>Data Asset</label>
        <referenceTo>Data_Asset__c</referenceTo>
        <relationshipLabel>Data Asset Feedback</relationshipLabel>
        <relationshipName>RWE_Data_Asset_Feedbacks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Recommendation__c</fullName>
        <inlineHelpText>Would you recommend this data for another study?</inlineHelpText>
        <label>Data Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_TF__c</fullName>
        <formula>IF(CONTAINS( TEXT(Data__c ), &quot;1&quot;), 1, 
IF(CONTAINS( TEXT(Data__c), &quot;2&quot;), 2, 
IF(CONTAINS( TEXT(Data__c ), &quot;3&quot;), 3, 
IF(CONTAINS( TEXT(Data__c), &quot;4&quot;), 4, 
IF(CONTAINS( TEXT(Data__c ), &quot;5&quot;), 5,0)))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data TF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <inlineHelpText>Was the Data sufficient to answer your study question?</inlineHelpText>
        <label>Data Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Star - Lowest Rating</fullName>
                </value>
                <value>
                    <fullName>2 Stars</fullName>
                </value>
                <value>
                    <fullName>3 Stars</fullName>
                </value>
                <value>
                    <fullName>4 Stars</fullName>
                </value>
                <value>
                    <fullName>5 Stars - Highest Rating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gap_Comments__c</fullName>
        <inlineHelpText>Please comment on the gaps</inlineHelpText>
        <label>Gap Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gaps_in_the_Data__c</fullName>
        <label>Were there any gaps in the Data?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsFeedbackComplete__c</fullName>
        <description>Checks if All Required Fields are not Blank and ensure Feedback is complete or not.</description>
        <formula>IF(AND(NOT(ISBLANK(TEXT(Data__c))),NOT(ISBLANK(TEXT(Data_Recommendation__c))),NOT(ISBLANK(TEXT(Gaps_in_the_Data__c)))),true,false)</formula>
        <label>IsFeedbackComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Study_ID__c</fullName>
        <formula>Study__r.Study_Project_ID__c</formula>
        <label>Study ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <label>Study</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Data Asset Feedback</relationshipLabel>
        <relationshipName>RWE_Data_Asset_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Study_DataAsset_TF__c</fullName>
        <label>Unique Study DataAsset TF</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provided By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Data_Asset_Feedbacks_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Data Asset Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Data_Asset__c</columns>
        <columns>Study__c</columns>
        <columns>Data_Recommendation__c</columns>
        <columns>Data__c</columns>
        <columns>Gaps_in_the_Data__c</columns>
        <columns>User__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DA-{00000000}</displayFormat>
        <label>Feedback Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Asset Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>